<resources>
    <string name="app_name">Expert</string>
    <string name="main_search_title">Search Commodities</string>
    <string name="commodity_list_title">Highlight Commodities</string>
    <string name="commodity_search_hint">Insert commodity name</string>
    <string name="select_country_title">Select Country</string>
    <string name="country_name">Country Name</string>

    <string name="prediction_title">Prediction</string>
    <string name="history_title">History (Real Data)</string>

    <string name="selected_country">%1$s ></string>

    <string name="commodity_name">Commodity Name</string>
    <string name="commodity_in_country">%1$s in %2$s</string>
    <string name="prediction_result">0</string>
    <string name="something_wrong">Oops.. something went wrong</string>
</resources>