<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/main_background"
    tools:context=".ui.home.HomeActivity">
    
    <TextView
        android:id="@+id/tv_search_commodity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_search_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ly_custom_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_search_commodity_title">
        <EditText
            android:id="@+id/et_commodity_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColorHint="@color/grey"
            android:padding="12dp"
            android:textColor="@color/white"
            android:hint="@string/commodity_search_hint"
            android:background="@color/upper_background"/>

        <ImageView
            android:id="@+id/btn_commodity_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:padding="11dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            android:background="@drawable/button" />
    </LinearLayout>

    <!--<androidx.appcompat.widget.SearchView
        android:id="@+id/sv_commodity_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/lyCustomSearch"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recent_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ly_custom_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/recent_search_item"/>

    <TextView
        android:id="@+id/tv_commodity_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commodity_list_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_recent_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_commodities_highlight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_commodity_list_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/commodity_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>